Source/JavaScriptCore/runtime/RegExpPrototype.h
@@ -57,5 +57,6 @@ JSC_DECLARE_HOST_FUNCTION(regExpProtoFuncMatchFast);
 JSC_DECLARE_HOST_FUNCTION(regExpProtoFuncSearchFast);
 JSC_DECLARE_HOST_FUNCTION(regExpProtoFuncSplitFast);
 JSC_DECLARE_HOST_FUNCTION(regExpProtoFuncTestFast);
+JSC_DECLARE_HOST_FUNCTION(regExpProtoFuncLastIndexIsWritable);
 
 } // namespace JSC
